--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laracasts/generators": "^2.0",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "twbs/bootstrap": "5.0.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
